@@ -84,7 +84,7 @@ fn reply() -> Result<()> {
     assert_eq!(&msg[..], b"Ferris");
 
     // Reuse the message to be more efficient.
-    msg.push_front(b"Hello, ")?;
+    msg.push_front(b"Hello, ");
 
     server.send(msg)?;
     Ok(())
